--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
             <tr>
                 <td>
                     <div class="name">
-                        <a href="https://scholar.google.co.in/citations?user=yXv3fbkAAAAJ&hl=en"><h2>Explore More about Dr. Mary
-                            Bhusan Biswal</h2></a>
+                        <a href="https://scholar.google.co.in/citations?user=yXv3fbkAAAAJ&hl=en"><h2>Explore More about Dr. Mary Mamatha Dadala</h2></a>
                     </div>
                     
                 </td>
